fix: visibility of FAB text

--- a/src/_styles/_main.css
+++ b/src/_styles/_main.css
@@ -32,7 +32,7 @@
   --size-selector: 0.25rem;
   --size-field: 0.25rem;
   --border: 1px;
-  --depth: 0;
+  --depth: 1;
   --noise: 0;
 }
 
